[package]
name = "pinnochio-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pinnochio_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-anchor = []


[dependencies]
pinocchio = {workspace = true}
pinocchio-system = {workspace = true}

